# sim-framework

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
example/: main.cpp
example/electric/: electricSim.cpp  electricSim.h
include/sim/: agent.h  sim.h
lib/src/sim/: sim.cpp
src/: main.cpp
src/sim/: agent.cpp  reporter.cpp  reporter.h  sim.cpp
